generated/checkers/gen/AllGen-Double-Free-3fd976afe9743110f20a23f93b7ff9693f2be4bf/build_logs/syntax-repair-00/build_stderr_1.log
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Lex/Preprocessor.h:40,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:20,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/SmallPtrSet.h: In instantiation of ‘class llvm::SmallPtrSet<const clang::FunctionDecl*, 64>’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:122:55:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/SmallPtrSet.h:455:27: error: static assertion failed: SmallSize should be small
  455 |   static_assert(SmallSize <= 32, "SmallSize should be small");
      |                 ~~~~~~~~~~^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/SmallPtrSet.h:455:27: note: ‘(64 <= 32)’ evaluates to false
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::OpsInitVisitor::VisitDesignatedInitExpr(clang::DesignatedInitExpr*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:150:35: error: ‘class clang::DesignatedInitExpr’ has no member named ‘getNumDesignators’; did you mean ‘short unsigned int:15 clang::DesignatedInitExpr::NumDesignators’? (not accessible from this context)
  150 |     for (unsigned i = 0, e = DIE->getNumDesignators(); i != e; ++i) {
      |                                   ^~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclCXX.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ExprCXX.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/CFG.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/AnalysisDeclContext.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:5079:12: note: declared private here
 5079 |   unsigned NumDesignators : 15;
      |            ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:151:69: error: invalid initialization of reference of type ‘const clang::DesignatedInitExpr::Designator&’ from expression of type ‘clang::DesignatedInitExpr::Designator*’
  151 |       const DesignatedInitExpr::Designator &Des = DIE->getDesignator(i);
      |                                                   ~~~~~~~~~~~~~~~~~~^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:155:44: error: invalid conversion from ‘const clang::IdentifierInfo*’ to ‘clang::IdentifierInfo*’ [-fpermissive]
  155 |       IdentifierInfo *II = Des.getFieldName();
      |                            ~~~~~~~~~~~~~~~~^~
      |                                            |
      |                                            const clang::IdentifierInfo*
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
